--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,17 @@
 	<artifactId>Tomcat</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-  	<build>
-       	 <finalName>maven-war</finalName>
-  	</build>
+  	<version>0.0.1-SNAPSHOT</version>
+  	<name>maven-war</name>
+  	<url>http://maven.apache.org</url>
+  	<dependencies>
+    		<dependency>
+     		  <groupId>junit</groupId>
+      		  <artifactId>junit</artifactId>
+                  <version>4.12</version>
+    		</dependency>
+	</dependencies>
+        <build>
+            <finalName>maven-war</finalName>
+        </build
 </project>
